--- a/Lab-03/package.json
+++ b/Lab-03/package.json
@@ -45,6 +45,8 @@
     "jest-expo": "~51.0.3",
     "nativewind": "^2.0.11",
     "npm": "^10.9.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
