--- a/GitHub-Finder/package.json
+++ b/GitHub-Finder/package.json
@@ -12,8 +12,6 @@
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-reanimated": "^3.10.0",
@@ -21,7 +19,9 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8"
   },
   "private": true
 }
