--- a/GitHub-Finder/package.json
+++ b/GitHub-Finder/package.json
@@ -9,17 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
+    "@react-navigation/native": "^7.0.2",
+    "@react-navigation/native-stack": "^7.0.2",
+    "eslint-plugin-import-helpers": "^2.0.1",
+    "expo": "^52.0.6",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.5",
+    "expo-status-bar": "~2.0.0",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-reanimated": "^3.10.0",
+    "prop-types": "^15.8.1",
+    "react": "18.3.1",
+    "react-native": "0.76.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-svg": "^15.8.0",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8"
   },
